# CashFlowMaster

./: .gitignore  app.py  models.py  pyproject.toml  replit.md  routes.py
attached_assets/: Pasted-2025-07-09-09-07-2025-SALDO-DO-DIA-357-90-R-357-90-Gen-rico-IGNORAR-Autom-tico-2025-07-09-09-07-1752127207548_1752127207549.txt  Pasted-2025-07-09-09-07-2025-SALDO-DO-DIA-357-90-R-357-90-Gen-rico-N-o-mapeado-Autom-tico-2025-07-09-0-1752126839476_1752126839476.txt  Pasted-Sistema-de-Automa-o-Cont-bil-de-Extratos-Banc-rios-CashFlowMaster-Revisado-e-Aprimorado-1-Vis-1752123412895_1752123412895.txt  Pasted-alan-o-Patrimonial-1-ATIVO-1-1-Ativo-Circulante-1-1-1-Dispon-vel-1-1-1-01-Caixa-1-1-1-01-001-Ca-1752125593049_1752125593049.txt
data/: layouts_exportacao.json  mapeamentos_contabeis.json  presets_mapeamentos.json  transacoes.json
data/templates/: bb.json  bradesco.json  itau.json
exports/: transacoes_20250710_052633.txt  transacoes_20250710_052656.csv  transacoes_20250710_052948.csv  transacoes_20250710_052956.txt  transacoes_20250710_054500.csv
logs/: .gitkeep
static/css/: style.css
static/js/: main.js
templates/: base.html  export.html  import.html  index.html  mappings.html  templates.html  transactions.html
uploads/: .gitkeep
utils/: export_manager.py  file_handlers.py  pdf_processor.py  transaction_mapper.py
